syntax = "proto3";

option go_package = "./proto/v1/server/brand";

package brand;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

enum Status {
      Unknown = 0;
      Active = 1;
      Inactive = 2;
}

enum SortBy {
      DESC = 0;
      ASC = 1;
}

message Brand {
      string ID = 1;
      string Name = 2;
      Status Status = 3;
      google.protobuf.Timestamp CreatedAt = 4;
      string CreatedBy = 5;
      google.protobuf.Timestamp UpdatedAt = 6;
      string UpdatedBy = 7;
      google.protobuf.Timestamp DeletedAt = 8;
      string DeletedBy = 9;
}

message CreateBrandRequest {
      string Name = 1;
      Status Status = 2;
      google.protobuf.Timestamp CreatedAt = 3;
      string CreatedBy = 4;
      google.protobuf.Timestamp UpdatedAt = 5;
      string UpdatedBy = 6;
}

message CreateBrandResponse {
      string ID = 1;
}

message GetBrandRequest {
      string ID = 1;
}

message GetBrandResponse {
      string ID = 1;
      string Name = 2;
      Status Status = 3;
      google.protobuf.Timestamp CreatedAt = 4;
      string CreatedBy = 5;
      google.protobuf.Timestamp UpdatedAt = 6;
      string UpdatedBy = 7;
}

message UpdateBrandRequest {
      string ID = 1;
      string Name = 2;
      Status Status = 3;
      google.protobuf.Timestamp UpdatedAt = 4;
      string UpdatedBy = 5;
}

message UpdateBrandResponse {
      string ID = 1;
      string Name = 2;
      Status Status = 3;
      google.protobuf.Timestamp UpdatedAt = 4;
      string UpdatedBy = 5;
}

message ListBrandRequest {
      SortBy       SortBy = 1;
	string       SortByColumn = 2;
	Status       Status = 3;
	int32        Limit = 4;
	int32        Offset = 5;
	string       SearchTerm = 6;
	string       StartDate = 7;    
	string       EndDate = 8;
}

message ListBrandResponse {
      repeated Brand Categories = 1;
      int32 Total = 2;
}

message DeleteBrandRequest {
      string ID = 1;
      string DeletedBy = 2;
}

service BrandService {
      rpc CreateBrand(CreateBrandRequest) returns (CreateBrandResponse) {}
      rpc GetBrand(GetBrandRequest) returns (GetBrandResponse) {}
      rpc UpdateBrand(UpdateBrandRequest) returns (UpdateBrandResponse) {}
      rpc ListBrand(ListBrandRequest) returns (ListBrandResponse) {}
      rpc DeleteBrand(DeleteBrandRequest) returns (google.protobuf.Empty) {}
}
